# gameforge

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
examples/hu/: game_design.md
gameforge/: __init__.py  cli.py
gameforge/adapter/: __init__.py  base.py
gameforge/devloop/: __init__.py
gameforge/models/: __init__.py  feedback.py  plan.py
gameforge/producer/: producer.py
gameforge/tools/: __init__.py  llm.py
gameforge/translator/: __init__.py  autogen_translator.py  base.py
output/: execution_plan_llm.json  gdd_normalized.md  milestone_1_core_game_loop.json  milestone_2_roguelike_structure.json  milestone_3_balance_and_polish.json  plan_overview.json
src/gameforge/: cli.py
src/gameforge/agents/: __init__.py  balancer.py  coder.py  critic.py  designer.py  producer.py
src/gameforge/models/: __init__.py  design.py  plan.py
src/gameforge/orchestrator/: graph.py  state.py
src/gameforge/producer/: __init__.py  normalizer.py  producer.py
tests/: test_models.py  test_producer.py
