[project]
name = "gameforge"
version = "0.1.0"
description = "AI Game Development Studio — multi-agent framework for end-to-end game creation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "pyautogen>=0.4",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
gameforge = "gameforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
